# AgenticBot

./: README.md  environment.yml  pyproject.toml  requirements.txt
app/: README.md  cleanup_history.py  history_manager.py  main.py  requirements.txt  setup_env.py  streamlit_app.py  test_image_generation.py  test_successful_prompts.py
app/chatgpt_agentic_clone/: agent.py
app/history/: .gitkeep  README.md
app/tests/: enhanced_chat.py  test.py  test_agent_run_async.py  test_agent_signature.py  test_alternative_api.py  test_alternative_approach.py  test_content_object.py  test_different_method.py  test_direct_agent.py  test_direct_message.py  test_explicit_agent.py  test_final_approach.py  test_message.py  test_message_receipt.py  test_model_and_format.py  test_object_attributes.py  test_runner_api.py  test_session_events.py  test_simple_chat.py  test_specific_response.py  test_tools.py  test_with_tools.py  working_chat.py
history/: chat_20250711_120656_None.json  chat_20250711_122347_70fc13cd.json
